<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainbgcolor"
    tools:context=".ContentPage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sidebarConstraintLayout"
        android:layout_width="65dp"
        android:layout_height="0dp"
        android:background="@color/sidebarcolor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/TV_News"
            android:layout_width="65dp"
            android:layout_height="100dp"
            android:layout_marginTop="75dp"
            android:fontFamily="casual"
            android:gravity="center"
            android:rotation="270"
            android:text="@string/sidebuttonnews"
            android:textAlignment="center"
            android:textColor="#FFD180"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/TV_Service"
            android:layout_width="65dp"
            android:layout_height="100dp"
            android:layout_marginTop="5dp"
            android:fontFamily="casual"
            android:gravity="center"
            android:rotation="270"
            android:text="@string/sidebuttonservices"
            android:textAlignment="center"
            android:textColor="#FFD180"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.176"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TV_News" />

        <TextView
            android:id="@+id/TV_Contacts"
            android:layout_width="80dp"
            android:layout_height="100dp"
            android:layout_marginTop="5dp"
            android:fontFamily="casual"
            android:gravity="center"
            android:rotation="270"
            android:text="@string/sidebuttoncontacts"
            android:textAlignment="center"
            android:textColor="#FFD180"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TV_Service" />

        <ImageView
            android:id="@+id/Image_Orange"
            android:layout_width="60dp"
            android:layout_height="71dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/orangebuttondesc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/phoneicon" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/contentPageImage"
        android:layout_width="0dp"
        android:layout_height="230dp"
        android:contentDescription="@string/PLACEHOLDER"
        android:scaleType="centerCrop"
        android:transitionName="contentImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sidebarConstraintLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/box_placeholder" />

    <TextView
        android:id="@+id/contantPageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="casual"
        android:contentDescription="@string/PLACEHOLDER"
        android:text="@string/PLACEHOLDER"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sidebarConstraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/contentPageImage" />

    <androidx.cardview.widget.CardView

        android:id="@+id/contentbg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sidebarConstraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/contantPageTitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/content_page_desc_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:contentDescription="@string/PLACEHOLDER"
                    android:fontFamily="casual"
                    android:text="@string/content_title_desc"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/content_page_prop_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="70dp"
                    android:layout_marginTop="20dp"
                    android:contentDescription="@string/PLACEHOLDER"
                    android:fontFamily="casual"
                    android:text="@string/content_property_title"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/content_page_desc_title_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:contentDescription="@string/PLACEHOLDER"
                    android:fontFamily="casual"
                    android:text="@string/PLACEHOLDER"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/content_page_prop_title_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="20dp"
                    android:contentDescription="@string/PLACEHOLDER"
                    android:fontFamily="casual"
                    android:text="@string/PLACEHOLDER"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/contentpage_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="casual"
        android:text="@string/CONTENT_TEXT_PLACEHOLDER"
        android:textColor="@color/black"
        android:contentDescription="@string/PLACEHOLDER"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sidebarConstraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/contentbg" />

    <ImageButton
        android:id="@+id/btncart"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/PLACEHOLDER"
        android:onClick="addToCart"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sidebarConstraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/contentpage_text"
        app:srcCompat="@drawable/box_button" />


</androidx.constraintlayout.widget.ConstraintLayout>