<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView

        android:id="@+id/contentbg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:cardCornerRadius="20dp"
        app:contentPaddingBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/content_image"
                android:layout_width="288dp"
                android:layout_height="194dp"
                android:contentDescription="@string/PLACEHOLDER"
                android:transitionName="contentImage"
                app:srcCompat="@drawable/box_placeholder" />

            <TextView
                android:id="@+id/content_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:contentDescription="@string/PLACEHOLDER"
                android:fontFamily="casual"
                android:text="@string/PLACEHOLDER"
                android:textColor="@color/sidebartextcolor"
                android:textSize="22dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/content_desc_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:contentDescription="@string/PLACEHOLDER"
                    android:fontFamily="casual"
                    android:text="@string/content_title_desc"
                    android:textColor="@color/sidebartextcolor"
                    android:textSize="17dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/content_prop_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="70dp"
                    android:layout_marginTop="20dp"
                    android:contentDescription="@string/PLACEHOLDER"
                    android:fontFamily="casual"
                    android:text="@string/content_property_title"
                    android:textColor="@color/sidebartextcolor"
                    android:textSize="17dp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/content_desc_title_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:contentDescription="@string/PLACEHOLDER"
                    android:fontFamily="casual"
                    android:text="@string/PLACEHOLDER"
                    android:textColor="@color/sidebartextcolor"
                    android:textSize="17dp" />

                <TextView
                    android:id="@+id/content_prop_title_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="20dp"
                    android:contentDescription="@string/PLACEHOLDER"
                    android:fontFamily="casual"
                    android:text="@string/PLACEHOLDER"
                    android:textColor="@color/sidebartextcolor"
                    android:textSize="17dp" />

            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>